# Tudo_python

Estudos/Boson_Treinamentos_YT/: exemplo1.py  exemplo3.py
Estudos/CursoPythonFlask/: Makefile  README.rst  decorador.py  exemplo0.py  pyproject.toml
Estudos/CursoPythonFlask/cursopythonflask/: wsgi.py
Estudos/CursoPythonFlask/tests/: test_cursopythonflask.py
Estudos/crud/: pyproject.toml
Estudos/crud/crud/: main.py
Estudos/crud/crud/ext/: db.py
Estudos/crud/tests/: test_crud.py
Estudos/crud2/: pyproject.toml
Estudos/crud2/crud2/: app.py  (+1 more)
Estudos/crud3/: README.rst  pyproject.toml
Estudos/crud3/crud3/: app.py  books.py  model.py  serializer.py
Estudos/crud3/migrations/versions/: 223d9c73e715_.py
Estudos/crud3/tests/: test_crud3.py
Estudos/crud4/: pyproject.toml
Estudos/crud4/tests/: test_crud4.py
Live_python/: SqlAlchemy.py  app.py  enterprise.db  exemplo1.py  exemplo2.py  pyproject.toml  test.db
Live_python/db_alchemy/: exemplo.py
Live_python/db_alchemy_orm/: app.py  config.py  db.py
Live_python/estudos/bibliotecas/: Live0(modulos_novos).py
Live_python/estudos/db_alchemy_orm/: db.py
Live_python/sqlalchemy(core)/: exemplo.py
flask/: .swp
flask/Estrutura_flask_blueprint/: app.py
flask/Flask_app_lp/: pyproject.toml
flask/view/: run.py
minisserie_pythonica/: exemplo10(Funcao_in_function).py  exemplo3.py  exemplo4(Typagem).py  exemplo9(Funcao_partial).py
programacao_orientada_objetos/: abstracao_de_dado.py  classes_instancias.py  exemplo1.py  exemplo1a.py  exemplo3.py  exemplo4.py  exemplo5.py  herança.py
programacao_orientada_objetos/Boson_Treinamentos_YT/: exemplo2.py  exemplo4.py  exemplo5.py
programacao_orientada_objetos/Live_de_python/: exemplo1.py  exemplo1a.py  exemplo2.py
sqlalchemy/: pyproject.toml
tudo_python/minisserie_pythonica/: exemplo5.py  exemplo6.py
(+35 files in other folders)
