[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Luan Bezerra <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.36"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
