[tool.poetry]
name = "crud3"
version = "0.1.0"
description = ""
authors = ["Luan Bezerra <luan.silvapvh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.36"
Flask-Migrate = "^3.1.0"
flask-marshmallow = "^0.14.0"
marshmallow = "^3.15.0"
marshmallow-sqlalchemy = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
